[package]
name = "cczu-vpn-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
cczuni = { git = "https://github.com/CCZU-OSSA/cczuni.git", features = [
    "rustls-tls",
], default-features = false }
tokio = { version = "*", features = ["io-util"] }
tokio-rustls = { version = "*", default-features = false, features = ["ring"] }
byteorder = "1"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }

# executable
tun = { version = "0.7" }

[lib]
name = "cczuvpnproto"
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
opt-level = "z"
