[package]
name = "cczu-vpn-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
cczuni = { git = "https://github.com/CCZU-OSSA/cczuni.git", features = [
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["io-util"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
] }
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# executable
tun-rs = { version = "2.8.3" }
anyhow = "1.0.102"
uniffi = { version = "0.31.1", features = ["tokio"] }
webpki-roots = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[features]
bindgen = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["bindgen"]

[lib]
name = "cczuvpnproto"
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
opt-level = "z"
