[package]
name = "cczu-vpn-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
cczuni = { git = "https://github.com/CCZU-OSSA/cczuni.git", features = [
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["io-util", "signal"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
] }
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
clap = { version = "4.5.60", features = ["derive"] }

# executable
tun-rs = { version = "2.8.3", features = ["interruptible"] }
anyhow = "1.0.102"
uniffi = { version = "0.31.1", features = ["tokio"] }
webpki-roots = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[features]
bindgen = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["bindgen"]

[lib]
name = "cczuvpnproto"
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

[profile.bench]
codegen-units = 16          # Make compiling criterion faster (16 is the default, but profile.release sets it to 1)
lto = "thin"                # Similarly, speed up linking by a ton
